# globalgrep

./: README.md  globalgrep.1  globalgrep.cabal
app/: globalgrep.hs
