cabal-version: 2.4
name:          globalgrep
version:       0.1.0.0
synopsis:      Searches for stuff on multiple information systems
description:   globalgrep is a command-line utility which facilitates
               searching for files on multiple systems.
bug-reports:   http://github.com/varikvalefor/globalgrep/issues
license:       0BSD
author:        Varik Valefor
maintainer:    varikvalefor@aol.com
copyright:     (c) Varik Valefor 2021.
category:      File

executable globalgrep
  ghc-options: -O2 -dynamic
  main-is: globalgrep.hs
  other-modules:
  build-depends:
    base ^>= 4.14.1.0,
    process == 1.6.13.2,
    async == 2.2.3
  hs-source-dirs: app
  default-language: Haskell2010
